# zenmonitor

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  install.sh  zenmonitor-agent.toml  zenmonitor-server.toml
agent/: Cargo.toml
agent/src/: config.rs  main.rs
agent/src/collectors/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  processes.rs  system.rs
dashboard/static/: index.html
dashboard/static/js/: app.js
server/: Cargo.toml
server/src/: config.rs  db.rs  main.rs  models.rs  sse.rs
server/src/handlers/: api.rs  dashboard.rs  mod.rs
server/src/monitors/: http_monitor.rs  mod.rs  ping_monitor.rs  ssl_monitor.rs  tcp_monitor.rs
