[package]
name = "zenmonitor-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ZenMonitor Agent - Reports VPS/server metrics"

[[bin]]
name = "zenmonitor-agent"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# System information
sysinfo = "0.30"

# HTTP client to report back to server
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.8"

# Hostname / network info
hostname = "0.4"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }
