[package]
name = "zenmonitor-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ZenMonitor - Monitoring server with web dashboard"

[[bin]]
name = "zenmonitor-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP client for monitoring
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SSL certificate checking
rustls = "0.23"
rustls-pki-types = "1"
webpki-roots = "0.26"
x509-parser = "0.16"

# Ping (ICMP)
surge-ping = "0.8"

# Configuration
toml = "0.8"

# UUID for unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Async utilities
futures = "0.3"
async-stream = "0.3"

# Error handling
anyhow = "1"

# URL parsing
url = "2"
